Fix menu item spacing

--- a/src/components/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu.module.scss
@@ -71,6 +71,10 @@
         counter-increment: menuItem 1;
         font-size: clamp(var(--fz-sm), 4vw, var(--fz-lg));
 
+        &:last-of-type {
+          margin-bottom: 35px;
+        }
+
         @media (max-width: 600px) {
           margin: 0 auto 10px;
         }
@@ -81,14 +85,13 @@
             color: var(--green);
             font-size: var(--fz-sm);
             margin-right: 5px;
-
           }
         }
       }
 
       a {
         width: 100%;
-        padding: 3px 20px 7px;
+        padding: 15px 20px 15px;
       }
     }
   }
